Fuchsia: Roll Fuchsia SDK from 2ddc73f to ad481e2.

* Fix to broken host tool "fvm verify" tested (outcome: works).
* SDK method rename; "zx_get_startup_handle" to "zx_take_startup_handle".

Bug: 852876,707030
Change-Id: Ib635c807ae92dedc76c65c34ab9d3829e8a7e5c0
Reviewed-on: https://chromium-review.googlesource.com/1102834
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Scott Graham <scottmg@chromium.org>
Commit-Queue: Kevin Marshall <kmarshall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567853}
Former-commit-id: 40dc4360fbc783de3e0ce5bb21bf5d25d16e9ebd